# esmjax

./: .gitignore  LICENSE  README.md  pyproject.toml
esmjax/: io.py  tokenizer.py
esmjax/modules/: modules.py  multihead_attention.py  partitioning.py  rotary_embedding.py
examples/: inference_15B.ipynb
tests/: test_tokenizer.py
tests/modules/: conftest.py  test_modules.py  test_multihead_attention.py  test_rotary_embedding.py
